src/css/code.editor.scss
/* ... */
#btn-add-dropdown,
.btn-caret {
    min-width: auto !important;
}

#editor-buttons>.btn,
#editor-buttons>.btn-group,
#editor-buttons>.input-group {
    margin-left: 5px;
}

.btn-toolbar input {
    width: auto;
    display: inline-block;
}

.cm-tabstrip .fa-file-pdf-o {
    color: #cc3e44 !important;
}

.cm-tabstrip .fa-file-excel-o {
    color: #8dc149 !important;
}

.cm-tabstrip .fa-file-word-o {
    color: #519aba !important;
}

.cm-tabstrip .fa-file-image-o {
    color: #a074c4 !important;
}

.cm-tabstrip .fa-file-video-o {
    color: #f55385 !important;
}

.cm-tabstrip .fa-file-archive-o {
    color: #6d8086 !important;
}

.datagrid.focused .datagrid-row:hover .icon-o,
.datagrid.focused .datagrid-row:hover .icon-h,
.datagrid.focused .datagrid-row:hover .icon-c,
.datagrid.focused .datagrid-row.selected .icon-o,
.datagrid.focused .datagrid-row.selected .icon-h,
.datagrid.focused .datagrid-row.selected .icon-c {
    color: white !important;
}

.datagrid-row:hover .icon-o,
.datagrid-row:hover .icon-h,
.datagrid-row:hover .icon-c,
.datagrid-row.selected .icon-o,
.datagrid-row.selected .icon-h,
.datagrid-row.selected .icon-c {
    color: black !important;
}

.icon-o {
    color: #8dc149 !important;
}

.icon-h {
    color: #a074c4 !important;
}

.icon-c {
    color: #519aba !important;
}

.cm-tabstrip .fa-map-o {
    color: #8dc149 !important;
}

.editor {
    top: 0;
    bottom: 20px;
    left: 0;
    position: absolute !important;
    right: 0;
    padding: 0;
    margin: 0;
    border: 0;
    border-radius: 0;
    border-top: 1px solid #ccc;
}

.output {
    bottom: 20px;
    left: 0;
    right: 0;
    position: absolute;
    height: 170px;
    padding: 0px;
    cursor: default;
    display: none;
}

.output a {
    /*
    padding-right: 5px;
    padding-left: 5px;
    */
}

#output-toolbar {
    border-top: #ccc 1px solid;
    border-bottom: #ccc 1px solid;
}

#output-toolbar .close {
    font-size: 15px;
    float: right;
    padding: 5px;
}

.output-display {
    position: absolute;
    top: 31px;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    outline: none;
    background: white;
}

.problem-display {
    position: absolute;
    top: 31px !important;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    outline: none;
    background: white;
}

.output-tab {
    display: inline-block;
    height: 22px;
    font-size: 15px;
    color: black;
    margin-left: 5px;
    text-decoration: none;
}

.output-tab:hover {
    text-decoration: none;
    background-color: #e0e0e0; 
}

.output-tab.active {
    border-bottom: 1px solid;
    text-decoration: none;
}

.btn-clear:before {
    background: #f5f5f5;
}

.output .error {
    color: red;
    text-decoration: none;
    display: block;
}

.output .warning {
    text-decoration: none;
    color: #DDDD00;
    display: block;
}

.output .error:hover,
.output .warning:hover {
    text-decoration: underline;
}

.statusbar {
    bottom: 0;
    position: absolute;
    left: 0;
    right: 0;
    cursor: default;
    height: 20px;
    border-top: #ccc 1px solid;
    background-color: rgb(245, 245, 245);
}

.statusbar span {
    display: inline-block;
    padding-left: 6px;
    padding-right: 6px;
}

.statusbar span.center {
    float: left;
}

.statusbar span.left,
.statusbar div.left {
    border-right: #ccc 1px solid;
    float: left;
}

.statusbar span.right,
.statusbar div.left {
    float: right;
    border-left: #ccc 1px solid;
    text-align: center;
}

#statusbar-location {
    min-width: 100px;
}

#statusbar-file {
    max-width: 40%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: left;

    /*direction: rtl;*/
}

.ace_status-indicator {
    float: right;
}

.dock-manager {
    top: 26px;
    bottom: 20px;
}

.cm-tabpane-container {
    background-color: grey;
    bottom: 1px;
}

.cm-tabpane {
    background-color: #f5f5f5;
}

.cm-tabstrip li {
    opacity: 1;
    color: silver;
}

.cm-tabstrip li.changed {
    background-color: lighten(rgb(218, 255, 181), 10%) !important;
    border-color: lighten(rgb(119, 168, 69), 10%) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.changed:hover {
    background-color: rgb(218, 255, 181) !important;
    border-color: rgb(119, 168, 69) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.new {
    background-color: lighten(rgb(178, 226, 255), 10%) !important;
    border-color: lighten(rgb(94, 185, 242), 10%) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.new:hover {
    background-color: rgb(178, 226, 255) !important;
    border-color: rgb(94, 185, 242) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.changed.active {
    background-color: rgb(218, 255, 181) !important;
    border-color: rgb(119, 168, 69) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.new.active {
    background-color: rgb(178, 226, 255) !important;
    border-color: rgb(94, 185, 242) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.active {
    background-color: rgb(249, 242, 217);
    border-color: rgb(247, 216, 106);
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.changed.active:hover {
    background-color: darken(rgb(218, 255, 181), 10%) !important;
    border-color: darken(rgb(119, 168, 69), 10%) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.new.active:hover {
    background-color: darken(rgb(178, 226, 255), 10%) !important;
    border-color: darken(rgb(94, 185, 242), 10%) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.active:hover {
    background-color: darken(rgb(249, 242, 217), 10%);
    border-color: darken(rgb(247, 216, 106), 10%);
    opacity: 1;
    color: black;
}

#btm-drag-bar {
    background-color: transparent;
    height: 3px;
    width: 100%;
    cursor: ns-resize;
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    z-index: 100;
}
/* ... */

